# bowling

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs  utilities.rs
src/gamestate/: frame.rs  gamestate.rs  mod.rs  player.rs  throw.rs
tests/: frame.rs  gamestate.rs  player.rs  throw.rs  utilities.rs
