[package]
name = "bowling"
version = "0.0.2-alpha.0"
authors = ["Roger Andersen <hexjelly@hexjelly.com>"]
license = "Apache-2.0"

description = "A crate to deal with bowling scoring."
documentation = "https://docs.rs/bowling"
homepage = "https://github.com/hexjelly/bowling"
repository = "https://github.com/hexjelly/bowling"
readme = "README.md"

keywords = ["bowling", "scoring", "sport"]
# categories = ["...", "..."]

[badges]
travis-ci = { repository = "hexjelly/bowling", branch = "master" }
coveralls = { repository = "https://github.com/hexjelly/bowling", branch = "master", service = "github" }

[lib]
name = "bowling"
path = "src/lib.rs"

[dependencies]
failure = "0.1.0"
failure_derive = "0.1.1"
